@@ -1,6 +1,0 @@
-object(A)#2 (0) {
-}
-object(A)#3 (0) {
-}
-object(A)#4 (0) {
-}
