@@ -1,0 +1,20 @@
+string(1) "X"
+string(1) "X"
+string(1) "Y"
+string(1) "Y"
+string(1) "X"
+string(1) "X"
+string(1) "Y"
+string(1) "Y"
+string(1) "X"
+string(1) "X"
+string(1) "Y"
+string(1) "Y"
+string(1) "X"
+string(1) "X"
+string(1) "Y"
+string(1) "Y"
+string(1) "X"
+string(1) "X"
+string(1) "Y"
+string(1) "Y"
